Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-16689

Check that the file handle on the memcached log was open correctly

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 4.1.0
    • 3.0.3
    • memcached
    • Security Level: Public
    • None
    • Untriaged
    • No

    Description

      If the memcached process runs out of file descriptors, the file logger module fails to check the result of fopen when opening / rotating log files. As a when it next attempts to flush the logfile it segfaults:

      #0  _IO_fwrite (buf=0x2116000, size=1, count=352, fp=0x2722640) at iofwrite.c:37
      #1  0x00007f071173dc17 in flush_pending_io (arg=0x20f2900) at /home/buildbot/buildbot_slave/centos-6-x64-30x-builder/build/build/memcached/extensions/loggers/file_logger.c:289
      #2  logger_thead_main (arg=0x20f2900) at /home/buildbot/buildbot_slave/centos-6-x64-30x-builder/build/build/memcached/extensions/loggers/file_logger.c:329
      #3  0x00007f0715b2c8ea in platform_thread_wrap (arg=<value optimized out>) at /home/buildbot/buildbot_slave/centos-6-x64-30x-builder/build/build/platform/src/cb_pthreads.c:19
      #4  0x00007f071483f9d1 in start_thread (arg=0x7f071173b700) at pthread_create.c:301
      #5  0x00007f07139e08fd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115
      

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              drigby Dave Rigby (Inactive)
              pvarley Patrick Varley (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              10 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                PagerDuty