MB-16689: Handle EMFILE on file logger rotation

Check for EMFILE (too many open files) when opening / rotating log
files in the file logger. If we fail to open a file, continue
without file logging, retrying the open on the next flush.

Includes a regression test.

Change-Id: Ia31941cddbc711086a82ebd482aeaa63f09db88b